--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<testcontainers.version>1.19.7</testcontainers.version>
 		<postgresql.version>42.7.3</postgresql.version>
 		<json-unit-spring.version>4.1.0</json-unit-spring.version>
+		<greenmail-junit5.version>2.1.3</greenmail-junit5.version>
 	</properties>
 	
 	<dependencies>
@@ -155,6 +156,12 @@
 			<groupId>net.javacrumbs.json-unit</groupId>
 			<artifactId>json-unit-spring</artifactId>
 			<version>${json-unit-spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.icegreen</groupId>
+			<artifactId>greenmail-junit5</artifactId>
+			<version>${greenmail-junit5.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
