add tests for confirm email endpoint

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 spring:
     application:
         name: core
+    jackson:
+        time-zone: UTC
     jpa:
         open-in-view: false
     mail:
