add fitny designer ui module

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<modules>
 		<module>fitnycrm-designer</module>
+		<module>fitnycrm-designer-ui</module>
 	</modules>
 
 	<properties>
@@ -83,22 +84,5 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
