--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ build/
 /.mvn/wrapper/maven-wrapper.properties
 /mvnw
 /mvnw.cmd
+/fitnycrm-designer-ui/src/main/webapp/build/**
+/fitnycrm-designer-ui/src/main/webapp/node_modules/**
