--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,8 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - &setup-java
-        name: Set up JDK 21
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
@@ -27,13 +26,18 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build  # Ensures tests run only after the build job succeeds
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - *setup-java  # Reuses the setup step
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
 
       - name: Run tests with Maven
         run: mvn test --file pom.xml
