ignore build for ui folder

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,14 @@ permissions:
 on:
   push:
     branches: [ "main" ]
+    paths-ignore:
+      - 'ui/**'
+      - '.cursor/**'
   pull_request:
     branches: [ "main" ]
+    paths-ignore:
+      - 'ui/**'
+      - '.cursor/**'
 
 jobs:
   build:
