--- a/ui/package.json
+++ b/ui/package.json
@@ -37,5 +37,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.7.2"
+  },
+  "overrides": {
+    "vite": "^6.2.3"
   }
 }
