--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,7 +27,7 @@ fitny:
 mail:
   from: noreply@fitnycrm.com
   confirmationUrl: ${fitny.base-url}/api/auth/confirm-email
-  clientRegistrationUrl: ${fitny.base-url}/api/tenants/%s/clients/signup?token=%s
+  clientRegistrationUrl: ${fitny.base-url}/api/tenants/%s/clients/signup/%s
 
 cors:
   allowed-origins:
