--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
       interval: "weekly"
 
   - package-ecosystem: "npm"
-    directory: "/ui"
+    directory: "/ui/admin"
     schedule:
       interval: "weekly"
     groups:
