--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   db:
     image: postgres:17.4
     restart: always
-    container_name: fittrackcrm-db
+    container_name: fitnycrm-db
     shm_size: '256mb'
     environment:
       POSTGRES_PASSWORD: postgres
